--- a/requirements.txt
+++ b/requirements.txt
@@ -95,3 +95,15 @@ wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==4.0.3
 zipp==3.8.1
+Django==4.1.7
+django-cors-headers==3.13.0
+django-oauth-toolkit==2.2.0
+django-smtp-ssl==1.0
+django-templated-mail==1.1.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
+social-auth-app-django==4.0.0
+social-auth-core==4.3.0
+drf-social-oauth2==1.2.2
+nltk==3.8.1
